client/src/components/App.scss
@import 'bulma';
@import '../../node_modules/bulma-extensions/bulma-switch/src/sass/index.sass';


.field{
  .switch{
    &[type="checkbox"] + label{
      padding-top: 0 !important;
    }
  }
}
.dark-mode{
  color: white;
  background:#333;
}
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.Container {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  color: white;
}

.App-link {
  color: #61dafb;
}
.App-Redux{
  background: #ffffff1a;
  border-radius: 25px;
  margin-top: 25px;
  padding: 2%;
}
@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


//Custom Styles Start

//Navigation
nav{
  width:100%;
}

//Loader
.loaderWrapper{
  display:flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height:100%;
  width:100%;
  position:absolute;
  z-index:100;
  background:white;
  opacity:100;
  visibility: visible;
  transition:visibility 0.3s linear,opacity 0.3s linear;
  img{
      width:250px;
  }

}
//Utils
.hidden{
  opacity: 0;
  visibility:hidden !important; 
}

